--- a/src/main/resources/templates/user/order/my-orders.html
+++ b/src/main/resources/templates/user/order/my-orders.html
@@ -152,6 +152,7 @@
             <a th:href="@{/shop}" class="btn btn-primary mt-3">Start Shopping</a>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
